2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/pid_jump/pid-data.ods: Created.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	First attempt at a PID controller for hovering.

	* experiments/pid_jump/dataview.ods: Created.
	* experiments/pid_jump/pid_jump.py: Created.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/jump/dataview.ods: Created.

2015-03-08  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* experiments/jump/jump.py: Better commenting.
	(MotorJumpExample.__init__): Private instance variables for class
	wide constants, timestamp, log variables and log variable
	averages.
	(MotorJumpExample._connected): Single log for all variables.
	(MotorJumpExample._log_data): Keep all data in instance variables.
	(MotorJumpExample._iir_filter): Created.
	(MotorJumpExample._jump_motors): Simplified logic.

2015-03-02  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Add some experimental scripts

	* experiments: Created.
	* experiments/basiclog/basiclog.py: Created.
	* experiments/jump/jump.py: Created.
	* experiments/ramp/ramp.py: Created.
	* experiments/test/test.py: Created.

2015-03-01  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	Project created.

	* ChangeLog: Created.
	* README.md: Created with meaningful content.